08-ingress/alpaca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alpaca
  name: alpaca
spec:
  replicas: 3
  selector:
    matchLabels:
      app: alpaca
  template:
    metadata:
      labels:
        app: alpaca
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:green
        name: kuard-amd64
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          periodSeconds: 2
          initialDelaySeconds: 0
          failureThreshold: 3
          successThreshold: 1
