08-ingress/webapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webapp-svc
  name: webapp-svc
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp-svc
  type: ClusterIP
