08-ingress/simple-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  labels:
    name: simple-ingress
spec:
  backend:
    serviceName: alpaca
    servicePort: 8080
