08-ingress/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: webapp.local.com
    http:
      paths:
      - backend:
          service:
            name: webapp-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
